# simple_gmail_archiver

./: .env.example  .gitignore  .mcp.json  README.md  pyproject.toml  start.sh
app/: config.py  database.py  main.py  models.py
app/api/: auth.py  emails.py  rules.py  schedules.py  stats.py  sync.py
app/frontend/: index.html
app/frontend/src/: App.css  App.tsx  api.ts  index.css
app/frontend/src/components/: ClassificationBadge.tsx  EmailRow.tsx  SenderGroup.tsx  StatsCard.tsx
app/frontend/src/pages/: Dashboard.tsx  Login.tsx  ReviewQueue.tsx  Schedules.tsx  Search.tsx  Settings.tsx
app/mcp/: server.py  tools.py
app/services/: classifier.py  deletion_manager.py  gmail.py  r2.py  registry.py  scheduler.py  search.py  sync_manager.py  task_manager.py
docs/superpowers/plans/: 2026-03-24-gmail-vault-plan.md
docs/superpowers/specs/: 2026-03-24-gmail-vault-design.md
tests/: conftest.py  test_api_emails.py  test_api_rules.py  test_api_schedules.py  test_classifier.py  test_database.py  test_deletion_manager.py  test_gmail.py  test_integration.py  test_mcp_tools.py  test_r2.py  test_search.py  test_sync_manager.py
